2015-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mpost.[ch]: Extern check_for_mp() moved from here ...
	* pdfximage.c: ... to here as static.

2015-08-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Introduce a new static function static int is_notdef_notzero()
	to fix the support of native type1 fonts. The t1disasm is required.
	The fix is intended as an intermediate one until more fine fix is given.

2015-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c: Better detection of bad (inconsistent) DVI files.
	* xdvipdfm-bad.test: New shell script to test bad DVI files.
	* tests/ids_2_6.dvi, tests/ids_3_2.dvi, tests/ids_a_b.dvi,
	tests/opc_fe.dvi, tests/ptx_2_2.dvi, tests/ptx_6_6.dvi,
	tests/rev_2_2.dvi, tests/rev_2_3.dvi, tests/void.dvi: New test
	input data (bad DVI files).
	* Makefile.am: Add the new test and input data.

2015-07-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.c, xbb.c: Use getopt_long() for option parsing.

2015-07-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xdvipdfm-ptx.test: New shell script to test Ascii pTeX output.
	* xdvipdfm-rev.test: New shell script to test TeX-XeT output.
	* tests/ptex.dvi, tests/reverse.dvi: New test input data.
	* Makefile.am: Add the new tests and input data.

2015-07-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, ac/withenable.ac, configure.ac, dvipdfmx.c,
	xbb.c: Only one binary and a symlink dvipdfmx->xdvipdfmx.
	* ac/dvipdfm-x.ac (removed): Obsolete configure options.
	* dvipdfm*.test (removed): Obsolete tests.
	* tests/img*.{bb,bbx} (removed): Obsolete test data.

2015-07-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Make dvipdfmx and xdvipdfmx essentially the same.
	* dvicodes.h: Slightly reformat.
	* dvi.c: Run-time decision to hanlde XeTeX extensions only for
	id_byte 6 and Ascii pTeX extension only for post_id_byte 3.
	* pdfdev.c: Remove '#ifdef XETEX' (one probably a mistake).
	* pdfdoc.c: New artbox handling only for XDV files (from XeTeX).